--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
 
 </head>
 
-<body>
+<body data-body>
     <!-- Cекція Хедер-->
     <header class="header">
         <div class="container header__container">
 
             <a class="logo logo--header" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
+
+            <button class="mobile-menu__btn" type="button" data-menu-button>
+                <svg class="mobile-menu__icon" width="24" height="16">
+                    <use class="mobile-menu__burger" href="./images/icons.svg#icon-menu"></use>
+                    <use class="mobile-menu__close" href="./images/icons.svg#icon-menu-close"></use>
+                </svg>
+            </button>
+
             <nav class="nav">
                 <ul class="nav__list list ">
                     <li class="nav__item"><a class="nav__link link current__link" href="./index.html">Студия</a>
@@ -144,17 +152,42 @@
                 <h2 class="about__title">Чем мы занимаемся</h2>
                 <ul class="about__list list">
                     <li class="about__item">
-                        <img src="./images/about/img-1.jpg" alt="написання коду" width="370">
+                        <picture>
+                            <!-- desktop screen -->
+
+                            <source media="(min-width: 1200px)"
+                                srcset="./images/about/img-1.jpg 1x, ./images/about/img2x-1.jpg 2x" type="image/jpg" />
+                            <img src="./images/about/img-1.jpg" alt="написання коду" width="370">
+                        </picture>
+
+                        <!-- <img src="./images/about/img-1.jpg" alt="написання коду" width="370"> -->
                         <p class="about__descr">Десктопные приложения</p>
                     </li>
 
                     <li class="about__item">
-                        <img src="./images/about/img-2.jpg" alt="адаптація до екрану" width="370">
+
+                        <picture>
+                            <!-- desktop screen -->
+
+                            <source media="(min-width: 1200px)"
+                                srcset="./images/about/img-2.jpg 1x, ./images/about/img2x-2.jpg 2x" type="image/jpg" />
+                            <img src="./images/about/img-2.jpg" alt="адаптація до екрану" width="370">
+                        </picture>
+                        <!-- <img src="./images/about/img-2.jpg" alt="адаптація до екрану" width="370"> -->
                         <p class="about__descr">Мобильные приложения</p>
                     </li>
 
                     <li class="about__item">
-                        <img src="./images/about/img-3.jpg" alt="підбір кольорів" width="370">
+                        <picture>
+                            <!-- desktop screen -->
+
+                            <source media="(min-width: 1200px)"
+                                srcset="./images/about/img-3.jpg 1x, ./images/about/img2x-3.jpg 2x" type="image/jpg" />
+                            <img src="./images/about/img-3.jpg" alt="підбір кольорів" width="370">
+                        </picture>
+
+
+                        <!-- <img src="./images/about/img-3.jpg" alt="підбір кольорів" width="370"> -->
                         <p class="about__descr">Дизайнерские решения</p>
                     </li>
                 </ul>
@@ -168,7 +201,25 @@
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list list">
                     <li class="team__member">
-                        <img src="./images/team/img-4.jpg" alt="фото Игорь Демьяненко" width="270" />
+                        <picture>
+                            <!-- desktop screen -->
+                            <source media="(min-width: 1200px)"
+                                srcset="./images/team/team-1l.jpg 1x, ./images/team/team2x-1l.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- tablet screen -->
+                            <source media="(min-width: 768px)"
+                                srcset="./images/team/team-1m.jpg 1x, ./images/team/team2x-1m.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- mobile screen -->
+                            <source media="(max-width: 767px)"
+                                srcset="./images/team/team-1s.jpg 1x, ./images/team/team2x-1s.jpg 2x"
+                                type="image/jpg" />
+                            <img class="box__img" src="./images/team/team-1l.jpg" alt="фото Игорь Демьяненко"
+                                width="270" />
+                        </picture>
+                        <!-- <img src="./images/team/img-4.jpg" alt="фото Игорь Демьяненко" width="270" /> -->
                         <div class="team-card">
                             <h3 class="team-card__title">Игорь Демьяненко</h3>
                             <p class="team-card__position" lang="en">Product Designer</p>
@@ -209,7 +260,25 @@
                         </div>
                     </li>
                     <li class="team__member">
-                        <img src="./images/team/img-5.jpg" alt="фото Ольга Репина" width="270" />
+                        <picture>
+                            <!-- desktop screen -->
+                            <source media="(min-width: 1200px)"
+                                srcset="./images/team/team-2l.jpg 1x, ./images/team/team2x-2l.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- tablet screen -->
+                            <source media="(min-width: 768px)"
+                                srcset="./images/team/team-2m.jpg 1x, ./images/team/team2x-2m.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- mobile screen -->
+                            <source media="(max-width: 767px)"
+                                srcset="./images/team/team-2s.jpg 1x, ./images/team/team2x-2s.jpg 2x"
+                                type="image/jpg" />
+
+                            <img class="box__img" src="./images/team/team-2l.jpg" alt="фото Ольга Репина" width="270" />
+                        </picture>
+                        <!-- <img class="box__img" src="./images/team/team-2l.jpg" alt="фото Ольга Репина" width="270" /> -->
                         <div class="team-card">
                             <h3 class="team-card__title">Ольга Репина</h3>
                             <p class="team-card__position" lang="en">Frontend Developer</p>
@@ -251,7 +320,26 @@
                     </li>
 
                     <li class="team__member">
-                        <img src="./images/team/img-6.jpg" alt="фото Николай Тарасов" width="270" />
+                        <picture>
+                            <!-- desktop screen -->
+                            <source media="(min-width: 1200px)"
+                                srcset="./images/team/team-3l.jpg 1x, ./images/team/team2x-3l.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- tablet screen -->
+                            <source media="(min-width: 768px)"
+                                srcset="./images/team/team-3m.jpg 1x, ./images/team/team2x-3m.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- mobile screen -->
+                            <source media="(max-width: 767px)"
+                                srcset="./images/team/team-3s.jpg 1x, ./images/team/team2x-3s.jpg 2x"
+                                type="image/jpg" />
+
+                            <img class="box__img" src="./images/team/img-6.jpg" alt="фото Николай Тарасов"
+                                width="270" />
+                        </picture>
+                        <!-- <img class="box__img" src="./images/team/team-3l.jpg" alt="фото Николай Тарасов" width="270" /> -->
                         <div class="team-card">
                             <h3 class="team-card__title">Николай Тарасов</h3>
                             <p class="team-card__position" lang="en">Marketing</p>
@@ -293,7 +381,27 @@
                     </li>
 
                     <li class="team__member">
-                        <img src="./images/team/img-7.jpg" alt="фото Михаил Ермаков" width="270" />
+                        <picture>
+                            <!-- desktop screen -->
+                            <source media="(min-width: 1200px)"
+                                srcset="./images/team/team-4l.jpg 1x, ./images/team/team2x-4l.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- tablet screen -->
+                            <source media="(min-width: 768px)"
+                                srcset="./images/team/team-4m.jpg 1x, ./images/team/team2x-4m.jpg 2x"
+                                type="image/jpg" />
+
+                            <!-- mobile screen -->
+                            <source media="(max-width: 767px)"
+                                srcset="./images/team/team-4s.jpg 1x, ./images/team/team2x-4s.jpg 2x"
+                                type="image/jpg" />
+
+                            <img class="box__img" src="./images/team/team-4l.jpg" alt="фото Михаил Ермаков"
+                                width="270" />
+                        </picture>
+
+                        <!-- <img class="box__img" src="./images/team/team-4l.jpg" alt="фото Михаил Ермаков" width="270" /> -->
                         <div class="team-card">
                             <h3 class="team-card__title">Михаил Ермаков</h3>
                             <p class="team-card__position" lang="en">UI Designer</p>
@@ -495,6 +603,7 @@
                     <input type="tel" class="form__input" name="user-phone" placeholder=" " required>
                     <svg class="form__icon" width="18px" height="18px">
                         <use href="./images/icons.svg#icon-phone"></use>
+                    </svg>
                 </label>
 
                 <label class="form__field">
@@ -502,7 +611,7 @@
                     <input type="email" class="form__input" name="user-mail" placeholder=" " required>
                     <svg class="form__icon" width="18px" height="18px">
                         <use href="./images/icons.svg#icon-email"></use>
-
+                    </svg>
                 </label>
 
                 <label class="form__field">
@@ -517,7 +626,7 @@
                     <svg class="checkbox__icon" width="15px" height="15px">
                         <use href="./images/icons.svg#icon-check"></use>
                     </svg>
-                    Соглашаюсь с рассылкой и принимаю
+                    <span>Соглашаюсь с рассылкой и принимаю</span>
                     <a class="agreement" href="">Условия договора</a>
 
                 </label>
@@ -529,7 +638,51 @@
 
         </div>
     </div>
+
+    <!-- Мобільне меню -->
+    <div class="mobile-menu" data-menu>
+        <ul class="mobile-menu-nav list">
+            <li class="mobile-menu-nav__item">
+                <a class="mobile-menu-nav__link link current" href="./index.html">Студия</a>
+            </li>
+            <li class="mobile-menu-nav__item">
+                <a class="mobile-menu-nav__link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="mobile-menu-nav__item">
+                <a class="mobile-menu-nav__link link" href="./index.html">Контакты</a>
+            </li>
+        </ul>
+        <ul class=" mobile-menu-contacts list">
+            <li class="mobile-menu-contacts__item">
+                <a class="mobile-menu-contacts__link accent link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+            <li class="mobile-menu-contacts__item">
+                <a class="mobile-menu-contacts__link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+        </ul>
+        <ul class="mobile-menu-social list">
+            <li class="mobile-menu-social__item">
+                <a class="mobile-menu-social__link link" href="">Instagram</a>
+            </li>
+            <li class="mobile-menu-social__item">
+                <a class="mobile-menu-social__link link" href="">Twitter</a>
+            </li>
+            <li class="mobile-menu-social__item">
+                <a class="mobile-menu-social__link link" href="">Facebook</a>
+            </li>
+            <li class="mobile-menu-social__item">
+                <a class="mobile-menu-social__link link" href="">LinkedIn</a>
+            </li>
+        </ul>
+
+
+
+    </div>
+
+
+
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
